# OpenLTTO-Firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
Squareline_UI_Project/: OpenLTTO_UI_Project.spl.sll  OpenLTTO_UI_Project.spl.spj
components/OpenLTTO_Game/: CMakeLists.txt  Kconfig.projbuild  OpenLTTO_Game.cpp  README.md
components/OpenLTTO_Game/include/: OpenLTTO_Game.h  OpenLTTO_Game_private.h
components/OpenLTTO_Hardware/: CMakeLists.txt  Kconfig.projbuild  OpenLTTO_Hardware.cpp  README.md
components/OpenLTTO_Hardware/include/: OpenLTTO_Hardware.h  axp2101.h  (+1 more)
components/OpenLTTO_Host/: CMakeLists.txt  Kconfig.projbuild  OpenLTTO_Host.cpp  README.md
components/OpenLTTO_Tagger/: CMakeLists.txt  Kconfig.projbuild  OpenLTTO_Tagger.cpp  README.md
components/OpenLTTO_UI/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  openltto_ui.c  openltto_ui_callbacks.c
components/OpenLTTO_UI/include/: openltto_ui.h  openltto_ui_callbacks.h
components/OpenLTTO_UI/lib/openltto_ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
components/OpenLTTO_UI/lib/openltto_ui/components/: ui_comp_hook.c
components/OpenLTTO_UI/lib/openltto_ui/images/: ui_img_openltto_logo_png.c
components/OpenLTTO_UI/lib/openltto_ui/screens/: ui_BootScreen.c  ui_HostConfigScreen.c  ui_HostHomeScreen.c  ui_ModeSelectionScreen.c  ui_TaggerConfigScreen.c  ui_TaggerHomeScreen.c  ui_ZoneConfigScreen.c  ui_ZoneHomeScreen.c
components/esp32_IR_LTTO/: CMakeLists.txt  idf_component.yml
main/: idf_component.yml  main.cpp
(+4 files in other folders)
